# zv_tasks

./: .clippy-build-profiles.json  .clippy.json  .gitmodules  CMakeLists.txt  README.md  TODO.md  deadlines.yaml  install_client.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
cmake/: CompileOptions.cmake  Helpers.cmake  Sanitize.cmake  Task.cmake
docker/: docker-compose.yml
docker/client/: .gitignore  README.md
docker/client/pequod/: __init__.py  client.py  config.py  helpers.py  logging.py
docker/config/: bashrc
docker/image/: Dockerfile  install_deps.sh
docs/: ci.md  docker.md  faq.md  links.md  readme.md  setup.md  style_guide.md
tasks/: CMakeLists.txt  README.md
tasks/abstract/: CMakeLists.txt  readme.md
tasks/abstract/deque/: CMakeLists.txt  readme.md  task.json
tasks/abstract/queue/: CMakeLists.txt  readme.md  task.json
tasks/abstract/stack/: CMakeLists.txt  readme.md  task.json
tasks/ast/: CMakeLists.txt  readme.md
tasks/ast/dijkastra/: CMakeLists.txt  readme.md  task.json
tasks/bash/: readme.md  task.json
tasks/hashtable/: CMakeLists.txt  readme.md
tasks/hashtable/HashTable/: CMakeLists.txt  readme.md  task.json
tasks/lists/: CMakeLists.txt  readme.md
tasks/lists/forward/: CMakeLists.txt  readme.md  task.json
tasks/lists/list/: readme.md
tasks/sort/: CMakeLists.txt  readme.md
tasks/sort/heap/: CMakeLists.txt  list.hpp  task.json
tasks/sort/sort/: forward_list.hpp
tasks/tree/: CMakeLists.txt  readme.md
tasks/tree/NTree/: CMakeLists.txt  (+1 more)
tasks/tutorial/: CMakeLists.txt
tasks/vector/: CMakeLists.txt  readme.md
(+32 files in other folders)
